--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="/javascript/hipster-words.js"></script>
   <script src="/javascript/main.js"></script>
 </head>
