--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -9,8 +9,8 @@
   .word-wrapper
     position: absolute
     left: 50%
-    top: 20%
-    transform: translate(-50%, -20%)
+    top: 35%
+    transform: translate(-50%, -35%)
     text-align: center
     max-width: 600px
     width: 100%
@@ -39,6 +39,7 @@
         border: none
         border-radius: 20px
         cursor: pointer
+        outline: none
         @include transition_form(0.3s)
         font:
           size: 17px
@@ -47,11 +48,10 @@
           background-color: darken(#E6E6ED, 20%)
 
     .mustache-wrapper
-      top: 120px
-      animation-name: mustache-up-down
-      animation-duration: 4s
       background-color: white
       position: relative
+      top: 120px
+
       height: 300px
 
       z-index: 9999
@@ -59,3 +59,8 @@
       .mustache
 
         margin-top: -80px
+
+
+.mustache-up-down-ani
+  animation-name: mustache-up-down
+  animation-duration: 2s
