Added mustache-showcasing animation

--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -51,16 +51,14 @@
       background-color: white
       position: relative
       top: 120px
-
       height: 300px
-
       z-index: 9999
 
       .mustache
-
         margin-top: -80px
 
 
 .mustache-up-down-ani
-  animation-name: mustache-up-down
-  animation-duration: 2s
+  //animation-name: mustache-up-down
+  animation-name: mustache-showcasing
+  animation-duration: 3s
