--- a/_sass/mustache-animation.sass
+++ b/_sass/mustache-animation.sass
@@ -7,3 +7,20 @@
 
   100%
     top: 120px
+
+
+@keyframes mustache-showcasing
+  0%
+    top: 120px
+
+  30%
+    top: -120px
+
+  50%
+    top: -30px
+
+  70%
+    top: -120px
+
+  100%
+    top: 120px
