--- a/_sass/mustache-animation.sass
+++ b/_sass/mustache-animation.sass
@@ -24,3 +24,17 @@
 
   100%
     top: 120px
+
+
+
+// Applied directly to the mustache
+
+@keyframes mustache-expand
+  0%
+    transform: scale(1.0)
+
+  50%
+    transform: scale(100.0)
+
+  100%
+    transform: scale(1.0)
