Added mustache-kick animation

--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -60,5 +60,5 @@
 
 .mustache-up-down-ani
   //animation-name: mustache-up-down
-  animation-name: mustache-expand
+  animation-name: mustache-kick
   animation-duration: 1.5s
