--- a/_sass/mustache-animation.sass
+++ b/_sass/mustache-animation.sass
@@ -38,3 +38,11 @@
 
   100%
     transform: scale(1.0)
+
+
+@keyframes mustache-kick
+  60%
+    transform: rotate(40deg)
+
+  70%
+    transform: rotate(-40deg)
