--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -60,5 +60,5 @@
 
 .mustache-up-down-ani
   //animation-name: mustache-up-down
-  animation-name: mustache-kick
-  animation-duration: 1.5s
+  animation-name: mustache-up-down
+  animation-duration: 2s
