Animation dropdown picker is working

--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -62,3 +62,18 @@
   //animation-name: mustache-up-down
   animation-name: mustache-up-down
   animation-duration: 2s
+
+.mustache-showcasing-ani
+  //animation-name: mustache-up-down
+  animation-name: mustache-showcasing
+  animation-duration: 3s
+
+.mustache-expand-ani
+  //animation-name: mustache-up-down
+  animation-name: mustache-expand
+  animation-duration: 1.5s
+
+.mustache-kick-ani
+  //animation-name: mustache-up-down
+  animation-name: mustache-kick
+  animation-duration: 1.5s
