mustache-wiggle animation is NOT complete

--- a/_sass/mustache-animation.sass
+++ b/_sass/mustache-animation.sass
@@ -46,3 +46,30 @@
 
   70%
     transform: rotate(-40deg)
+
+
+// NOT COMPLETE!
+@keyframes mustache-wiggle
+  0%
+    top: 120px
+
+  1%
+    top: -120px
+
+  2%
+    transform: rotate(10deg)
+
+  3%
+    transform: rotate(-10deg)
+
+  4%
+    transform: rotate(10deg)
+
+  5%
+    transform: rotate(-10deg)
+
+  6%
+    transform: rotate(0deg)
+
+  8%
+    top: 120px
