--- a/_sass/content.sass
+++ b/_sass/content.sass
@@ -77,3 +77,9 @@
   //animation-name: mustache-up-down
   animation-name: mustache-kick
   animation-duration: 1.5s
+
+
+// NOT COMPLETE!
+.mustache-wiggle-ani
+  animation-name: mustache-wiggle
+  animation-duration: 45.5s
