Initial 'get example' functionality

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -13,4 +13,11 @@
       <img src="/images/mustache.svg" alt="There should be a mustache here (╯°□°）╯︵ ┻━┻" class="mustache">
     </div>
   </div>
+
+  <div class="word-example">
+    <h1>Example:</h1>
+    <p>That was amazeballs, my man!</p>
+
+    <button class="scale-down-btn">OK</button>
+  </div>
 </section>
