--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,7 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
   "base",
+  "extras",
   "mustache-animation",
   "header",
   "content"
