--- a/_sass/header.sass
+++ b/_sass/header.sass
@@ -9,13 +9,17 @@ $animation-dropdown-bg: #e6e6e6
   z-index: 9999
 
   .animation-picker
+    background: transparent
+
     .animation-btn
       background: black
       border: none
+      border-radius: 3px
       cursor: pointer
       color: white
       outline: none
-      width: 100%
+      padding: 5px
+      width: 200px
       font:
         size: 18px
 
